[metadata]
name = oneimage
version = attr: oneimage.__version__
description = A command-line tool for image format conversion and manipulation
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/JuanS3/oneimage
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Pillow>=10.0.0
    click>=8.1.0
    loguru>=0.7.0

[options.entry_points]
console_scripts =
    oneimage = oneimage.cli.main:main

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info

[mypy]
python_version = 3.8
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
strict_optional = True
plugins = pydantic.mypy

[mypy.plugins.pydantic.*]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = 
    --verbose
    --cov=oneimage
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=80

[coverage:run]
source = oneimage
omit = 
    tests/*
    setup.py
    oneimage/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == "__main__":
    pass
    raise ImportError

[coverage:html]
directory = coverage_html

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
